examples/sample-product-chart/chart-test/reports/scenario-gateway-api-istio-egress-20260602-125958-3/artifacts/manifests/istio-gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: "2026-06-02T17:00:40Z"
    generation: 1
    name: egressgateway
    namespace: istio-system
    resourceVersion: "652"
    uid: 893b4e3e-b214-46e3-8d74-33ce0c0aa8aa
  spec:
    selector:
      istio: egressgateway
    servers:
    - hosts:
      - httpbin.org
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
