examples/sample-product-chart/chart-test/reports/scenario-gateway-api-istio-egress-20260602-125958-3/artifacts/manifests/istio-serviceentries.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: ServiceEntry
  metadata:
    creationTimestamp: "2026-06-02T17:00:40Z"
    generation: 1
    name: httpbin-external
    namespace: sample
    resourceVersion: "659"
    uid: d8b4d34d-b04b-4acd-8f23-fe99197316af
  spec:
    hosts:
    - httpbin.org
    location: MESH_EXTERNAL
    ports:
    - name: http
      number: 80
      protocol: HTTP
    resolution: DNS
  status:
    addresses:
    - host: httpbin.org
      value: 240.240.0.1
    - host: httpbin.org
      value: 2001:2::1
kind: List
metadata:
  resourceVersion: ""
